[workspace]
resolver = "2"
members = [
    "crates/whisper_cpp_sys",
    "crates/whisper_cpp",
    "crates/whisper_cpp_tests"
]

[workspace.dependencies]
bindgen = "0.69.1"
cmake = "0.1.50"
derive_more = "0.99.17"
link-cplusplus = "1.0.9"
thiserror = "1.0.50"
tokio = { version = "1.34.0" }
wav = "1.0.0"
whisper_cpp = { path = "crates/whisper_cpp", default-features = false }
whisper_cpp_sys = { path = "crates/whisper_cpp_sys", default-features = false }
