[package]
name = "whisper_cpp"
version = "0.1.0"
description = "Rust bindings for Whisper.cpp"
edition = "2021"
authors = ["Pedro Valente <pedro.amaral.valente@gmail.com>"]
repository = "https://github.com/binedge/whisper_cpp-rs"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper_cpp_sys = { version = "^0.1.0", path = "../whisper_cpp_sys" }
thiserror = "1.0.50"
derive_more = "0.99.17"
tokio = { version = "1.34.0", features = ["sync", "rt"] }
