[package]
name = "whisper_cpp_sys"
version = "0.2.1"
description = "Automatically-generated bindings to whisper.cpp's C API"
edition = "2021"
authors = ["Pedro Valente <pedro.amaral.valente@gmail.com>"]
repository = "https://github.com/binedge/whisper_cpp-rs"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
publish = true
links = "whisper"

[dependencies]
link-cplusplus = "1.0.9"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"

[features]
default = ["compat", "native"]
compat = [] # this feature modifies the symbols exposed by the generated libraries to avoid conflicts
native = ["avx", "avx2", "fma", "f16c", "accel"]
avx = []
avx2 = []
fma = []
f16c = [] # implied when compiled using MSVC with avx2/avx512
accel = [] # Accelerate framework
openvino = []
cuda = []
metal = []
blas = []
hipblas = []
clblast = []
