[package]
name = "whisper_cpp_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
wav = { workspace = true }
whisper_cpp = { workspace = true, features = ["compat", "native"] }
